<resources>
    <string name="app_name">My Food App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome_to_our_restaurant">Welcome to our Restaurant</string>
    <string name="explore_your_dream_food">Explore your dream food</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="registr">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite_meal">Favourite Meal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My cart</string>
    <string name="sergiosmorcosdouaihy_gmail_com">SergiosMorcosDouaihy@gmail.com</string>
    <string name="s_m_d">S M D</string>
</resources>